Docs: documentación reescrita para distribución portable con jpackage