@@ -1,292 +1,104 @@
-# 🚀 Crear .exe — MediaVerse con jpackage
+# 🚀 Generar el portable — MediaVerse
 
-**Los usuarios NO necesitarán tener Java instalado.** El .exe incluye Java 21 integrado.
-
-## Requisitos Previos (Para Ti, Desarrollador)
-
-- ✅ Java 21 instalado (para compilar)
-- ✅ Maven instalado
-- ✅ WiX Toolset 3.14+ (solo para Windows, gratis)
-- ✅ Git
-- ✅ 5-10 GB libres en disco (para el proceso de build)
+Esta guía es para **desarrolladores** que quieran generar el zip portable de MediaVerse desde el código fuente.
 
 ---
 
-## Paso 1: Instalar WiX Toolset (Solo Windows)
+## Requisitos
 
-**WiX** es necesario para generar el instalador .exe en Windows.
-
-1. **Descarga** desde [https://wixtoolset.org/releases/](https://wixtoolset.org/releases/)
-   - Versión: 3.14+ (recomendado 3.14.4)
-   - Sistema: Windows
-
-2. **Instala** (Next > Next > Finish)
-
-3. **Verifica** que se instaló:
-   ```bash
-   heat.exe --version
-   # Deberías ver: WiX Toolset Version 3.14...
-   ```
-
-Si ves el error "no se reconoce el comando", reinicia PowerShell/CMD.
+- Java 25 (JDK completo, no solo JRE)
+- Maven 3.8+
+- JavaFX jmods 25 descargados en local
 
 ---
 
-## Paso 2: Configurar pom.xml para jpackage
+## Paso 1: Descargar los JavaFX jmods
 
-Abre `pom.xml` y añade el plugin de jpackage en la sección `<build>`:
+Los jmods son necesarios para que `jpackage` empaquete correctamente las librerías nativas de JavaFX. **Son distintos al SDK de JavaFX** — asegúrate de descargar el paquete de tipo "jmods".
 
-```xml
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-jpackage-plugin</artifactId>
-    <version>0.1.4</version>
-    <configuration>
-        <mainClass>com.rujiman.mediatracker.Main</mainClass>
-        <name>MediaVerse</name>
-        <version>1.0.0</version>
-        <icon>src/main/resources/com/rujiman/mediatracker/views/icons/mediaverse_logo.ico</icon>
-        <vendor>Rujiman</vendor>
-        <description>Tu universo de entretenimiento en una sola app</description>
-        
-        <!-- Windows específico -->
-        <winInstallDir>MediaVerse</winInstallDir>
-        <winConsole>false</winConsole>
-        <winMenu>true</winMenu>
-        <winShortcut>true</winShortcut>
-        
-        <!-- Java integrado (no requiere Java en el usuario) -->
-        <javaOptions>
-            <option>-Xmx1024m</option>
-            <option>--add-opens java.base/java.lang=ALL-UNNAMED</option>
-        </javaOptions>
-    </configuration>
-</plugin>
-```
+1. Ve a [https://gluonhq.com/products/javafx/](https://gluonhq.com/products/javafx/)
+2. Selecciona: versión **25**, sistema **Windows**, arquitectura **x64**, tipo **jmods**
+3. Descarga y descomprime en una carpeta conocida, por ejemplo `C:\javafx\javafx-jmods-25\`
 
-**Importante**: 
-- `mainClass` debe ser `com.rujiman.mediatracker.Main`
-- `icon` debe ser ruta a tu icono en formato `.ico`
+Comprueba que dentro de esa carpeta hay ficheros `.jmod` (`javafx.base.jmod`, `javafx.graphics.jmod`, etc.).
 
 ---
 
-## Paso 3: Convertir Logo PNG a ICO (Opcional)
+## Paso 2: Compilar el fat jar
 
-Si tienes `mediaverse_logo.png` pero necesitas `.ico`:
-
-### Online (Fácil)
-1. Abre [https://convertio.co/png-ico/](https://convertio.co/png-ico/)
-2. Sube `mediaverse_logo.png`
-3. Descarga el `.ico`
-4. Copia a `src/main/resources/com/rujiman/mediatracker/views/icons/mediaverse_logo.ico`
-
-### Con ImageMagick (Línea de Comandos)
-```bash
-convert mediaverse_logo.png -define icon:auto-resize=256,128,96,64,48,32,16 mediaverse_logo.ico
-```
-
----
-
-## Paso 4: Compilar el Proyecto
-
-```bash
-cd tu-carpeta-mediaverse
+```powershell
 mvn clean package
 ```
 
-Esto genera un **JAR ejecutable** con todas las dependencias empaquetadas.
-
-Espera 5-10 minutos (Maven descarga dependencias).
-
-**Resultado**: `target/mediaverse-1.0-SNAPSHOT.jar`
+Genera `target\MediaVerse.jar` (~44 MB), que incluye todas las dependencias dentro.
 
 ---
 
-## Paso 5: Generar el .exe
+## Paso 3: Preparar la carpeta de input limpia
 
-### Opción A: Con jpackage Maven Plugin (Recomendado)
+`jpackage` toma todos los jars que encuentre en la carpeta de input. Para evitar que incluya los jars intermedios que Maven Shade genera como subproducto, copia solo el jar final a una carpeta limpia:
 
-```bash
-mvn jpackage:jpackage
-```
-
-**Salida**: `target/dist/MediaVerse-1.0.0.exe`
-
-El instalador estará listo en `target/dist/`.
-
-### Opción B: Con jpackage Directo (Más Control)
-
-```bash
-# Busca tu JAVA_HOME
-java -XshowSettings:properties -version 2>&1 | grep "java.home"
-
-# Genera el .exe
-jpackage --input target \
-    --name MediaVerse \
-    --main-jar mediaverse-1.0-SNAPSHOT.jar \
-    --main-class com.rujiman.mediatracker.Main \
-    --version 1.0.0 \
-    --vendor Rujiman \
-    --description "Tu universo de entretenimiento" \
-    --icon src/main/resources/com/rujiman/mediatracker/views/icons/mediaverse_logo.ico \
-    --app-version 1.0.0 \
-    --type exe
+```powershell
+mkdir input-clean
+Copy-Item target\MediaVerse.jar input-clean\
 ```
 
 ---
 
-## Paso 6: Prueba el .exe
+## Paso 4: Generar el portable con jpackage
 
-1. **Busca** el instalador en `target/dist/MediaVerse-1.0.0.exe` (o similar)
-
-2. **Doble clic** para instalar
-
-3. **Sigue el wizard** (Siguiente > Siguiente > Instalar)
-
-4. **Abre la app** desde el escritorio o menú inicio
-
-5. **Verifica**:
-   - La app inicia sin errores
-   - No pide Java instalado
-   - Las búsquedas funcionan (si tienes `.env` con API keys)
-
----
-
-## Paso 7: Crear Release en GitHub
-
-1. **Sube el .exe a GitHub**:
-   - Ve a tu repo
-   - **Releases** → **Create a new release**
-   - Tag: `v1.0.0`
-   - Title: `MediaVerse 1.0.0`
-   - Descripción:
-     ```markdown
-     # MediaVerse 1.0.0
-
-     ## 📦 Descargar
-
-     - **MediaVerse-1.0.0.exe** — Instalador para Windows (recomendado)
-     - **mediaverse-1.0-SNAPSHOT.jar** — JAR ejecutable (requiere Java 21)
-
-     ## 🚀 Instalación
-
-     1. Descarga el `.exe`
-     2. Doble clic para instalar
-     3. **No necesitas Java** — viene incluido
-     4. Configura `.env` con tus API keys (ver SETUP.md)
-
-     ## 📝 Cambios
-
-     - Serie v1.0 de MediaVerse
-     - Soporte para Series, Películas, Anime, Juegos, Música
-     - Sistema de favoritos y carpetas
-     - Dashboard personalizado
-     ```
-
-   - **Attach files**: Sube el `.exe`
-   - **Publish release**
-
----
-
-## Tamaño Final del .exe
-
-- **Sin optimización**: 300-400 MB
-- **Con optimizaciones**: 250-300 MB
-
-El tamaño incluye:
-- Java 21 Runtime: ~180 MB
-- JavaFX: ~60 MB
-- Dependencias Maven: ~15 MB
-- Tu código: ~5 MB
-
----
-
-## Optimizar el Tamaño (Opcional)
-
-Si el .exe es demasiado grande:
-
-### 1. Usar jlink para crear JRE custom
-
-```bash
-jlink --module-path $JAVA_HOME/jmods \
-    --add-modules java.base,java.logging,java.desktop,java.net.http \
-    --output custom-jre \
-    --compress 2
+```powershell
+& "C:\ruta\a\tu\jdk-25\bin\jpackage.exe" `
+  --input input-clean `
+  --main-jar MediaVerse.jar `
+  --main-class com.rujiman.mediatracker.Main `
+  --name MediaVerse `
+  --type app-image `
+  --icon mediaverse_logo.ico `
+  --module-path "C:\javafx\javafx-jmods-25" `
+  --add-modules javafx.base,javafx.graphics,javafx.controls,javafx.fxml,javafx.media,java.base,java.desktop,java.sql,java.naming,java.management,java.security.jgss `
+  --win-console `
+  --dest dist
 ```
 
-### 2. Usar ese JRE en jpackage
+Ajusta las rutas a tu JDK y a tu carpeta de jmods.
 
-```bash
-jpackage --runtime-image custom-jre \
-    --name MediaVerse \
-    ...
+El resultado es una carpeta `dist\MediaVerse\` con esta estructura:
+
+```
+dist\MediaVerse\
+├── MediaVerse.exe
+├── app\
+│   └── MediaVerse.jar
+└── runtime\
+    └── (Java 25 + JavaFX embebidos)
 ```
 
-**Reducción**: ~50-100 MB menos de tamaño.
-
 ---
 
-## Troubleshooting .exe
+## Paso 5: Añadir el .env.example
 
-### ❌ "jpackage not found"
-→ Java 21 no está en PATH
-```bash
-java -version  # Debe mostrar 21.x
+Copia el `.env.example` a la carpeta `app\` para que el usuario sepa qué fichero tiene que crear:
+
+```powershell
+Copy-Item .env.example dist\MediaVerse\app\.env.example
 ```
 
-### ❌ "WiX Toolset not found"
-→ Reinicia PowerShell/CMD tras instalar WiX
+---
 
-### ❌ El .exe se abre pero falla
-→ Comprueba que tienes `.env` con API keys válidas
+## Paso 6: Comprimir y distribuir
 
-### ❌ "Icon not found"
-→ La ruta en `pom.xml` no existe
-→ Verifica ruta: `src/main/resources/com/rujiman/mediatracker/views/icons/mediaverse_logo.ico`
-
-### ❌ El .exe no inicia (consola abre y cierra)
-→ Probablemente falta una librería en el empaquetado
-→ Abre consola en la carpeta de instalación y ejecuta:
-```bash
-MediaVerse.exe --version
+```powershell
+Compress-Archive -Path dist\MediaVerse -DestinationPath MediaVerse-portable.zip
 ```
-Para ver el error exacto.
+
+Sube `MediaVerse-portable.zip` a GitHub Releases. El usuario lo descarga, descomprime, pone su `.env` en `app\` y ejecuta `MediaVerse.exe`. No necesita instalar nada.
 
 ---
 
-## Redistribuir el .exe
+## Notas importantes
 
-Una vez tengas el `.exe`:
-
-1. **Sube a GitHub Releases** (recomendado)
-2. **Crea un ZIP** con el `.exe` y un `README.txt`:
-   ```
-   MediaVerse 1.0.0
-   
-   1. Doble clic en MediaVerse-1.0.0.exe
-   2. Sigue el instalador
-   3. Abre MediaVerse desde el escritorio
-   4. Configura API keys (mira SETUP.md)
-   ```
-3. **Distribúyelo** donde quieras
-
-Los usuarios NO necesitarán Java — está incluido en el `.exe`.
-
----
-
-## Versiones Futuras
-
-Cuando saques v1.1, v1.2, etc.:
-
-1. Cambia versión en `pom.xml`: `<version>1.1.0</version>`
-2. Corre: `mvn clean package jpackage:jpackage`
-3. Nuevo `.exe` se genera en `target/dist/`
-4. Sube a GitHub Releases como v1.1.0
-
----
-
-## 👨‍💻 Autor
-
-**Ruben Jimenez Manzano** (Rujiman)
-
-Trabajo Final de Grado (TFG) en el ciclo DAM — 2025
+- El `runtime\` pesa varios cientos de MB (Java 25 + JavaFX embebidos). Es normal.
+- El parámetro `--win-console` hace que el exe vuelque errores en la terminal, útil para depurar. Para distribución final puedes quitarlo si no quieres que aparezca una ventana de consola.
+- Si cambias código, repite los pasos 2, 3 y 4. El paso 1 solo hay que hacerlo una vez.
+- El `.env` del usuario nunca va dentro del zip que distribuyes — cada uno pone el suyo propio con sus claves.
